gramatica.txt
Gramática para el Lenguaje de Programación Personalizado:

1. Program      → inicio { Block } fin
2. Block        → Statement Block | ε
3. Statement    → Declaration | Assignment | FunctionCall | IfElse | Loop
4. Declaration  → var IDENTIFIER = Expression ;
5. Assignment   → IDENTIFIER = Expression ;
6. FunctionCall → IDENTIFIER ( Params ) ;
7. IfElse       → if ( Expression ) { Block } ElsePart
8. ElsePart     → else { Block } | ε
9. Loop         → for ( Declaration Expression ; Assignment ) { Block }
                | while ( Expression ) { Block }
                | do { Block } while ( Expression ) ;
10. Expression   → Term Expression'
11. Expression'  → + Term Expression' | - Term Expression' | ε
12. Term         → Factor Term'
13. Term'        → * Factor Term' | / Factor Term' | ε
14. Factor       → NUMBER | IDENTIFIER | ( Expression )
15. Params       → Expression , Params | Expression | ε
